# advent2024

./: .gitignore  WORKSPACE
helper/: Helper.java
p1/: Puzzle.java  Puzzlev2.java
p10/: Puzzle.java  Puzzlev2.java  Puzzlev4.java
p11/: BUILD.bazel  Puzzle.java  Puzzlev2.java
p12/: BUILD.bazel  Draw.java  Puzzle.java  Puzzlev2.java
p13/: BUILD.bazel  Puzzle.java  Puzzlev2.java
p14/: BUILD.bazel  Puzzle.java  Puzzlev2.java
p15/: BUILD.bazel  Puzzle.java  Puzzlev2.java
p16/: BUILD.bazel  Puzzle.java  Puzzlev2.java
p17/: BUILD.bazel  Puzzle.java  Puzzlev2.java  Puzzlev3.java  Puzzlev4.java  Puzzlev5.java
p18/: BUILD.bazel  Puzzle.java  Puzzlev2.java
p19/: BUILD.bazel  Puzzle.java  Puzzlev2.java
p2/: Puzzle.java  Puzzlev2.java
p20/: BUILD.bazel  Puzzle.java  Puzzlev2.java
p21/: BUILD.bazel  Puzzle.java  Puzzlev2.java
p22/: BUILD.bazel  Puzzle.java  Puzzlev2.java  Puzzlev3.java
p23/: BUILD.bazel  Puzzle.java  Puzzlev2.java
p24/: BUILD.bazel  Puzzle.java  Puzzlev2.java
p25/: BUILD.bazel  Puzzle.java
p3/: Puzzle.java  Puzzlev2.java
p4/: Puzzle.java  Puzzlev2.java
p5/: Puzzle.java  Puzzlev2.java
p6/: Puzzle.java  Puzzlev2.java
p7/: Puzzle.java  Puzzlev2.java
p8/: BUILD.bazel  Puzzle.java  Puzzlev2.java
p9/: Puzzle.java  Puzzlev2.java
